<resources>
    <string name="app_name">DISYS Task</string>

    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="your_phone"> Phone Number</string>
    <string name="your_email"> Email</string>
    <string name="your_name"> Name</string>
    <string name="set_password">Unified Number</string>
    <string name="email">Email</string>
    <string name="idbarahno">Idbarahno</string>
    <string name="eid">Eid</string>


</resources>
