<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:hint="@string/your_phone"
            android:inputType="phone"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextSize="16sp"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:hint="@string/your_email"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextSize="16sp"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:hint="@string/your_name"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextSize="16sp"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_unified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:hint="@string/set_password"
            android:inputType="number"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextSize="16sp"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_eid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:hint="@string/eid"
            android:inputType="number"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextSize="16sp"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_idbarahno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:hint="@string/idbarahno"
            android:inputType="number"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextSize="16sp"
            app:met_primaryColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/register"
            android:theme="@style/accentButton" />
    </LinearLayout>

</LinearLayout>
